syntax="proto3";

package service;
option java_package = "com.github.wenweihu86.raft.example.server.service";
option java_outer_classname = "ExampleMessage";

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetResponse {
    bool success = 1;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
}

